--- a/clase-18/public/index.html
+++ b/clase-18/public/index.html
@@ -9,15 +9,27 @@
 <body>
    <main> 
     <header class="page-header">
+
+        <section id="card-profile"> 
+            <h1>Seccion 1</h1>
+            <p>Bunch of Awesome content</p>
+        </section>
+
+        <section id="card-overview-profile">
+            <h1>Seccion 2</h1>
+            <p>Bunch of Awesome content</p>
+        </section>
+
             <h1>Cute Puppies Express!</h1>
-            <nav class="crumbs">
-            <ul>
-                    <li><a href="first.html">First Item</a></a></li>
-                    <li><a href="second.html">Second Item</a></li>
-                    <li><a href="third.html">third Item  3</a></li>
-            </ul>
-        </nav>
-    </header>     
+                <nav class="crumbs">
+                    <ul>
+                        <li><a href="first.html">First Item</a></a></li>
+                        <li><a href="second.html">Second Item</a></li>
+                        <li><a href="third.html">third Item  3</a></li>
+                    </ul>
+                </nav>
+        </header>    
+        
     </main> 
 </body>
 </html>
