--- a/clase-18/public/index.html
+++ b/clase-18/public/index.html
@@ -9,7 +9,16 @@
 <body>
    <main> 
     <header class="page-header">
-
+            <h1>Cute Puppies Express!</h1>
+            <nav class="crumbs">
+                <ul>
+                    <li><a href="first.html">First Item</a></a></li>
+                    <li><a href="second.html">Second Item</a></li>
+                    <li><a href="third.html">third Item  3</a></li>
+                </ul>
+            </nav>
+    </header>    
+        <section>
         <section id="card-profile"> 
             <h1>Seccion 1</h1>
             <p>Bunch of Awesome content</p>
@@ -19,16 +28,9 @@
             <h1>Seccion 2</h1>
             <p>Bunch of Awesome content</p>
         </section>
+    </section>
 
-            <h1>Cute Puppies Express!</h1>
-                <nav class="crumbs">
-                    <ul>
-                        <li><a href="first.html">First Item</a></a></li>
-                        <li><a href="second.html">Second Item</a></li>
-                        <li><a href="third.html">third Item  3</a></li>
-                    </ul>
-                </nav>
-        </header>    
+            
         
     </main> 
 </body>
